# mimir

./: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  MANIFEST.in  build.sh  cnf__grammar__visitor__sentence__generator_8hpp.html  conan_ci.py  conan_export.py  conan_export.sh  conandata.yml  conanfile.py  conanfile.txt  configure.sh  dir_66fb76fa755250be1f806332061b9454.html  namespacemimir_1_1languages.html  pyproject.toml  setup.py
.actions/setup-environment/: actions.yml
.github/.actions/cpp-build/: action.yml
.github/.actions/setup-environment/: action.yml
.github/workflows/: build-matrix.json  build_sdist.yml  build_wheels.yml  cpp-build.yml  cpp-tests.yml  integration-tests.yml  integrationtests.yml  pip.yml  read-build-matrix.yml  read-matrix-file.yml  setup.yml  unittests.yml  wheels-matrix.json
benchmark/: CMakeLists.txt  profiling.cpp
cmake/: dependencies.cmake
cmake/targets/: mimir.cmake  pymimir.cmake
dependencies/: CMakeLists.txt
dependencies/cista/: conandata.yml  conanfile.py
dependencies/loki/: CMakeLists.txt  conandata.yml  conanfile.py
dependencies/nauty/: CMakeLists.txt  conanfile.py
dependencies/range-v3/: CMakeLists.txt
dependencies/unordered_dense_cista/: conandata.yml  conanfile.py
exe/: CMakeLists.txt  gfa.cpp  planner_astar.cpp  planner_brfs.cpp  planner_iw.cpp  planner_siw.cpp
experiments/: astar.py  astar_parser.py  brfs.py  brfs_parser.py  combiner-mimir-downward.py  combiner-mimir-mimir.py  utils.py
include/mimir/: declarations.hpp  mimir.hpp
include/mimir/algorithms/: BS_thread_pool.hpp  BS_thread_pool_utils.hpp  kpkc.hpp  memory_pool.hpp  murmurhash3.hpp  nauty.hpp
include/mimir/cista/: serialization.hpp
include/mimir/common/: collections.hpp  concepts.hpp  conversion.hpp  deref.hpp  equal_to.hpp  grouped_vector.hpp  hash.hpp  hash_cista.hpp  hof.hpp  itertools.hpp  macros.hpp  mp.hpp  printers.hpp  timers.hpp  type_traits.hpp  types.hpp  types_cista.hpp  views_extension.hpp
include/mimir/datasets/: abstraction.hpp  declarations.hpp  faithful_abstraction.hpp  global_faithful_abstraction.hpp  ground_action_edge.hpp  ground_actions_edge.hpp  state_space.hpp  state_vertex.hpp
include/mimir/formalism/: action.hpp  atom.hpp  axiom.hpp  declarations.hpp  domain.hpp  effects.hpp  equal_to.hpp  (+26 more)
lib/pymimir/: init.hpp  init_action.cpp  init_action_schema.cpp  init_atom.cpp  init_domain.cpp  init_domain_parser.cpp  init_goal_matcher.cpp  init_heuristic.cpp  init_implication.cpp  init_literal.cpp  init_literal_grounder.cpp  init_object.cpp  init_open_list.cpp  init_predicate.cpp  init_problem.cpp  init_problem_parser.cpp  init_search.cpp  init_state.cpp  init_state_space.cpp  init_succesor_generator.cpp  init_transition.cpp  init_type.cpp  pymimir.cpp  to_string.hpp
python/src/: CMakeLists.txt
sandbox/: CMakeLists.txt  sandbox.hpp
src/: CMakeLists.txt
src/algorithms/: kpkc.cpp  nauty.cpp  nauty_dense_impl.cpp  nauty_dense_impl.hpp  nauty_sparse_impl.cpp  nauty_sparse_impl.hpp  nauty_utils.hpp
src/common/: kpkc.cpp
src/datasets/: faithful_abstraction.cpp  global_faithful_abstraction.cpp  state_space.cpp
src/formalism/: action.cpp  action_schema.cpp  atom.cpp  axiom.cpp  bitset.cpp  declarations.cpp  domain.cpp  formatter.cpp  formatter.hpp  function.cpp  function_expressions.cpp  function_skeleton.cpp  ground_atom.cpp  ground_function.cpp  ground_function_expressions.cpp  ground_literal.cpp  implication.cpp  literal.cpp  metric.cpp  numeric_fluent.cpp  object.cpp  predicate.cpp  problem.cpp  repositories.cpp  requirements.cpp  state.cpp  term.cpp  transition.cpp  type.cpp  variable.cpp
src/formalism/transformers/: delete_relax.cpp  encode_parameter_index_in_variables.cpp  to_positive_normal_form.cpp
src/formalism/translators/: move_existential_quantifiers.cpp  remove_types.cpp  remove_universal_quantifiers.cpp  rename_quantified_variables.cpp  simplify_goal.cpp  split_disjunctive_conditions.cpp  to_disjunctive_normal_form.cpp  to_effect_normal_form.cpp  to_mimir_structures.cpp  utils.cpp
src/generators/: complete_state_space.cpp  flat_action_schema.cpp  goal_matcher.cpp  grounded_successor_generator.cpp  lifted_schema_successor_generator.cpp  lifted_successor_generator.cpp  literal_grounder.cpp  state_space.cpp  successor_generator_factory.cpp
src/graphs/: color_function.cpp  digraph.cpp  digraph_vertex_colored.cpp  object_graph.cpp  object_graph_pruning_strategy.cpp  tuple_graph.cpp
src/graphs/algorithms/: color_refinement.cpp
src/languages/description_logics/: parser.cpp  refinement_brfs.cpp
src/languages/description_logics/parser/: parser_def.hpp
src/pddl/: abstract_syntax_tree.cpp  pddl_parser.cpp
src/search/: action.cpp  axiom.cpp  breadth_first_search.cpp  condition_grounders.cpp  eager_astar_search.cpp  plan.cpp  search_base.cpp  state.cpp  state_repository.cpp
src/search/algorithms/: iw.cpp
src/search/applicable_action_generators/: grounded.cpp  lifted.cpp
src/search/applicable_action_generators/lifted/: axiom_evaluator.cpp  axiom_stratification.cpp  consistency_graph.cpp
src/search/condition_grounders/: conjunction_grounder.cpp
src/search/heuristics/: h1_heuristic.cpp  h2_heuristic.cpp  hstar.cpp
src/search/openlists/: priority_queue_open_list.cpp
test/: test_expand.cpp  test_ground.cpp  test_parse.cpp  test_search.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  conanfile.py  main.cpp
tests/python/: fixture.hpp  main_tests.cpp  test_bindings.cpp
tests/sandbox/: CMakeLists.txt  sandbox.cpp
tests/unit/: CMakeLists.txt
tests/unit/algorithms/: memory_pool.cpp
tests/unit/cista/: dynamic_bitset.cpp
tests/unit/common/: grouped_vector.cpp
tests/unit/datasets/: faithful_abstraction.cpp  global_faithful_abstraction.cpp  state_space.cpp
tests/unit/graphs/: dynamic_graph.cpp  object_graph.cpp  static_graph.cpp  static_graph_boost_adapter.cpp  tuple_graph.cpp
tests/unit/graphs/algorithms/: color_refinement.cpp  folklore_weisfeiler_leman.cpp
tests/unit/languages/description_logics/: refinement.cpp
tests/unit/search/: search_node.cpp
(+223 files in other folders)
