[build-system]
requires = [
    "setuptools>=42",
    "pybind11_stubgen",
    "wheel",
    "cmake>=3.24",
    "ninja",
    "conan>=2.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "pymimir"
dynamic = ["version"]
authors = [
    { name = "Simon Stahlberg", email = "simon.stahlberg@gmail.com" },
    { name = "Dominik Drexler", email = "dominik.drexler@liu.se" },
    { name = "Michael Aichmüller", email = "m.aichmueller@gmail.com" }
]
description = "Mimir planning library"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Source = 'https://github.com/maichmueller/mimir'

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
packages = ["pymimir"]  # Modify if needed
package-dir = { "" = "python/src" }
include-package-data = false

[tool.setuptools.dynamic]
version = { file = ["__version__"] }

[tool.setuptools.package-data]
pymimir = ["*.txt", "*.rst", "*.md"]


[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
archs = "auto64"
container-engine = "docker"
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-ppc64le-image = "manylinux2014"
manylinux-s390x-image = "manylinux2014"
# C++20 concepts are not supported
# musllinux-x86_64-image = "musllinux_1_1"
# musllinux-i686-image = "musllinux_1_1"
# musllinux-aarch64-image = "musllinux_1_1"
# musllinux-ppc64le-image = "musllinux_1_1"
# musllinux-s390x-image = "musllinux_1_1"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
